--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 Unless noted otherwise, these changes where initiated and applied by
 Mark Overmeer.
 
+version 2.01:
+
 version 2.00: Tue  4 Nov 16:45:48 CET 2025
 
 	Fixes:
