start next release

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 Unless noted otherwise, these changes where initiated and applied by
 Mark Overmeer.
 
+version 2.02:
+
 version 2.01: Wed  5 Nov 17:35:44 CET 2025
 
 	Fixes:
