--- a/ChangeLog
+++ b/ChangeLog
@@ -9,9 +9,11 @@ version 2.02:
 	Fixes:
 	- dependency to Log::Report::Template
 	  rt.cpan.org#171523 [Andreas Koenig], cpantesters
+	  rt.cpan.org#171596 [Kurt D. Starsini]
 
 	Improvements:
 	- add bugtracker to meta.
+	- add funding
 
 version 2.01: Wed  5 Nov 17:35:44 CET 2025
 
